--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "require-dev": {
         "facebook/fbexpect": "^2.7",
         "hhvm/hacktest": "^2.0",
-        "hhvm/hhast": "^4.25"
+        "hhvm/hhast": "^4.25",
+        "hhvm/hsl-experimental": "^4.50"
     },
     "scripts": {
         "check": [
