add support for hhvm 4.85

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         }
     ],
     "require": {
-        "hhvm": "~4.83.1 || ~4.84.0",
+        "hhvm": "~4.83.1 || ~4.84.0 || ~4.85.0",
         "hhvm/hsl": "^4.41",
         "hhvm/hsl-experimental": "^4.66"
     },
