--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -1,10 +1,10 @@
-name: "coding standards"
+name: "unit tests"
 
 on: ["pull_request", "push"]
 
 jobs:
-  coding-standards:
-    name: "coding standards"
+  unit-tests:
+    name: "unit tests"
     runs-on: ${{ matrix.os }}
 
     strategy:
@@ -36,4 +36,4 @@ jobs:
 
       - name: "lint"
         continue-on-error: ${{ matrix.experimental }}
-        run: "hhvm vendor/bin/hhast-lint"
+        run: "hhvm vendor/bin/hacktest tests"
